# SWAT-UQ

./: .gitignore  1.py  A.prj  AA.prj  AAA.prj  LICENSE  README.md  README_CN.md  SWAT.prj  TEST.par  a.csv  a.pro  b.pro  c.par  c.pro  d.par  data.txt  demo.spec  docs-requirements.txt  mkdocs.yml  ob1_new.pro  paras_infos_new.par  pyproject.toml  readthedocs.yaml  ser2_ob1.pro  setup.py  te.par  te.py  test.prj  test.py  test1.py  test2.py
GUI/: __init__.py  display.py  displayA.py  displayB.py  get_start.py  main_gui.py  optimization.py  para_setting.py  pro_define.py  problemObj.py  project.py  sensitivity_analysis.py  swat_uq_core.py  validation.py  woker.py  worker.py
GUI2/: MainGUI.py  aaa.par
SWAT_UQ/: __init__.py  metric.py  swat_uq_calibration.py  swat_utility.cpp
TxtInOut/: 000010000.pnd  000010000.rte  000010000.wus  000010001.chm  000010001.mgt  000010001.sol  000010002.hru  000010003.sdr  000010003.sep  000010004.sep  000010005.hru  000010005.sep  000010005.sol  000010006.chm  000010006.gw  000010006.sol  000010007.gw  000010007.sol  000010008.chm  000010008.gw  000010008.mgt  000010008.sol  000010009.chm  000020000.wgn  000020001.mgt  000020002.hru  000020003.gw  000020004.chm  000020004.sep  000030000.pnd  000030000.rte  000030001.mgt  000030001.sdr  000030001.sol  000030002.hru  000030003.gw  000030003.sdr  000030004.gw  000030004.sol  000030006.chm  (+198 more)
docs/: best_management_practices.md  example_runoff_calibration.md  index.md  swat_uq_dev.md  swat_uq_gui.md
example/: swatCalibration.py
site/: 404.html  sitemap.xml
swatuq/: __init__.py  (+3 more)
(+745 files in other folders)
